# OSDS-2022Fall

./: README.md
project1/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
project1/part1/: threads.cc  threads.go
project1/part1/concurrent_queue/: CMakeLists.txt  Makefile  cmake_install.cmake  concurrent_queue.cc  concurrent_queue.go  concurrent_queue.h
project1/part1/goqueue/: goqueue.go
project1/part1/utils/: CMakeLists.txt  Makefile  cmake_install.cmake  utils.cc  utils.h
project1/part2/: threads.cc  threads.go
project1/part2/consumer/: consumer.go
project1/part2/producer/: producer.go
project2/: assign  assign.go  client.go  project2.docx  resize.csv  server.go
project2/__MACOSX/: ._project2.docx  ._resize.csv
project2/consumer_client/: consumer_client.go
project2/producer_client/: producer_client.go
project34/: Makefile  README.md  client.go  miner.go  project3_4.docx
